@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-16-8
+DATE: 09/04/2020
+STAFF: lec
+TR13327/AP group weekly reference QC reports
+
 TAG: qcreports_db-6-0-16-7
 DATE: 09/04/2020
 STAFF: lec
